backends/drm: ignore ctm support on legacy

BUG: 482143
(cherry picked from commit 568f9fb666dd0d3b969419ac2b09542b56cf07a0)